--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "ng-rx-store",
-  "version": "0.0.0",
+  "name": "router-animation",
+  "author": "Rafael Nassybullin",
+  "version": "2.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
